@@ -79,15 +79,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-    * multiple files, Trivial cleanups
-      PR: 39518 - Christophe JAILLET
-      trunk:
-         http://svn.apache.org/viewvc?view=rev&revision=557837
-         http://svn.apache.org/viewvc?view=rev&revision=557972
-      2.2.x
-         http://people.apache.org/~rpluem/patches/code_clean.diff
-      +1: rpluem, trawick, niq
-
    * mod_include: Add an "if" directive syntax to test whether an URL
      is accessible, and if so, conditionally display content. This
      allows a webmaster to hide a link to a private page when the user
